Try another fix for color toggle position on mobile

--- a/docusaurus/src/scss/navbar.scss
+++ b/docusaurus/src/scss/navbar.scss
@@ -293,8 +293,7 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
     }
 
     button[class*="toggleButton"] {
-      right: 0px;
-      // top: 12px;
+      left: 10px;
       border: none;
     }
 
